Add error messages for canvas creation failures

BUG=591500
TBR=tommyw@chromium.org,rmistry@chromium.org
R=forshaw@chromium.org

Review-Url: https://codereview.chromium.org/2025373002
Cr-Commit-Position: refs/heads/master@{#397441}

Former-commit-id: 726d29ca0ef67aff29b78d03fa105a9eb90f404d